--- a/k8s/00-secret.yaml
+++ b/k8s/00-secret.yaml
@@ -1,7 +1,9 @@
-﻿apiVersion: v1
+apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
 type: Opaque
 data:
-  POSTGRES_PASSWORD: YXBwcGFzcw==  # apppass
+  POSTGRES_PASSWORD: Y2hhbmdlbWU=
+
+
